removed bootstrap reference

--- a/quizapp/templates/quizapp/profile.html
+++ b/quizapp/templates/quizapp/profile.html
@@ -25,6 +25,7 @@
      {% if i.contestid.contestType == 'typing' %}
         Words per Minute : {{ i.wordsPerMin }} <br>
         Time Taken : {{ i.timeTaken }} <br>
+        Backspaces : {{ i.backspaceCount }} <br>
         Text: {{ i.userSubmision }} <br>
      {% endif %}
 </div>    
